--- a/themes/juice/templates/index.html
+++ b/themes/juice/templates/index.html
@@ -102,7 +102,7 @@
     {% block footer %}
     <footer>
         <small class="subtext">
-            <a href="http://forge-on.com">forge-on.com</a> © 2022
+            <a href="https://forge-onward.pages.dev">forge-on.pages.dev</a> © 2022
         </small>
     </footer>
     {% endblock footer %}
